@@ -1,3 +1,9 @@
+2002-07-20  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mouse.cc,font.cc,etc.:  More things kind-of work in OpenGL
+	(though mouse doesn't clean up after itself and conversation text
+	disappears, so there's LOTs to fix.)
+
 2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
 	* configure.in: check for sys/wait.h, signal.h (see above)
